--- a/www/css/app.css
+++ b/www/css/app.css
@@ -1,7 +1,30 @@
+body {
+    background:url(../img/Background.jpg);
+}
+
+.spa {
+    display: none;
+}
+#tabAboutMe {
+    display: block;
+}
+
 a.brand-logo {
     font-size: 1.2rem;
 }
 
-p {
-    text-align: justify;
+.hCenter {
+    text-align: center;
+}
+
+.cooleDiv {
+    border-radius: 25px;
+    border-style: solid;
+    background: black;
+    color: orange;
+
+}
+
+.cooleDiv p, h3, h4 {
+    margin-left: 5px;
 }
