--- a/www/css/app.css
+++ b/www/css/app.css
@@ -52,3 +52,10 @@ a.brand-logo {
     text-align:center;
     margin:5px;
 }
+
+.centerDiv {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
